# Biped

./: README.md
biped/: CMakeLists.txt  Data_Server.py  Data_client.py  Slave.py  head.py  left_arm.py  left_leg.py  master.py  master.py~  package.xml  right_arm.py  right_arm.py~  torso.py  torso.py~
biped/Joint_Info/: left_leg.yaml  right_arm.yaml  right_leg.yaml
biped/include/: Data_Server.py  Data_client.py  head.py  left_arm.py  left_leg.py  motor_ids  right_arm.py  right_leg.py  torso.py
biped/launch/: controller_manager.launch  start_meta_controller.launch
biped/msg/: Motor_States.msg
biped/srv/: Fetch_Motor_Data.srv
old/: CMakeLists.txt  CMakeLists.txt~  main_client2.py  master.py  package.xml  package.xml~  right_arm.py  trajectory.py  trajectory_client.py  trajectory_torso.py
old/Joint_Info/: head.yaml  left_arm.yaml  right_leg.yaml  torso.yaml
old/launch/: controller_manager.launch
