<package>
  <name>biped</name>
  <version>0.0.1</version>
  <description>The biped package</description>
  <maintainer email="free.extraspeed@gmai.com">Chronos</maintainer>
  <license>BSD</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
 </package>
